@@ -918,11 +918,9 @@ effective.
 If set to a non\-zero value, then information about which users are members
 of groups allowed to use a partition will be updated periodically, even when
 there have been no changes to the /etc/group file.
-Otherwise group member information will be updated periodically only after the
-/etc/group file is updated. If GroupUpdateTime is set, the default is zero
-(disabled). If GroupUpdateTime is not set, GroupUpdateForce is always 1.
-This behavior will change in 17.11, where the GroupUpdateTime will always
-default to 1, unless explicitly set to 0.
+If set to zero, group member information will be updated only after the
+/etc/group file is updated.
+The default value is 1.
 Also see the \fBGroupUpdateTime\fR parameter.
 
 .TP
